--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   "author": "Joe Martella",
   "license": "MIT",
   "devDependencies": {
-    "@types/chrome": "^0.0.60",
-    "@types/react": "^16.9.32",
-    "@types/react-dom": "^16.9.6",
-    "css-loader": "^3.4.2",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "ts-loader": "^4.0.1",
-    "typescript": "^3.8.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
+    "@types/chrome": "^0.0.202",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.8.3",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
